--- a/Week 02/index.html
+++ b/Week 02/index.html
@@ -37,13 +37,12 @@
     let clear = false
 
     function resetMap() {
-      const map = Array(10000).fill(0)
+      map = Array(10000).fill(0)
       for (let i=0; i<100; i++) {
         for (let j=0; j<100; j++) {
           app.children[j * 100 + i].style.backgroundColor = map[j * 100 + i] ? '#000' : '#ccc'
         }
       }
-      // localStorage.setItem('mapData', JSON.stringify(map))
     }
 
     function init() {
@@ -77,6 +76,44 @@
     }
 
     init()
+
+    function sleep(t) {
+      return new Promise((resolve, reject) => {
+        setTimeout(resolve, t)
+      })
+    }
+
+    // 广度优先的寻址算法
+    async function path(map, start, end) {
+      let queue = [start] // 这个就是要去查找的集合，算法核心
+
+      // 寻找周围没有障碍或者未找过的点，没有找到就return,找到就插入到queue队列中
+      function insert(x, y) {
+        if (x < 0 || y >= 100 || x >= 100 || y < 0) return
+        if (map[y * 100 + x]) return // 该点有值
+
+        map[y * 100 + x] = 2 // 格子是空的，该位置值为0；有墙，值为1；可以走，值设置为2
+        queue.push([x, y])
+      }
+
+      while (queue.length > 0) {
+        let [i, j] = queue.shift()
+        await sleep(30)
+        app.children[j*100 + i].style.backgroundColor = 'green'
+        if (i === end[0] && j === end[1]) {
+          // 找到了
+          return true
+        }
+
+        // 没有找到，继续找改点周围的可以找的点(上下左右)
+        insert(i - 1, j)
+        insert(i + 1, j)
+        insert(i, j - 1)
+        insert(i, j + 1)
+      }
+
+      return false
+    }
     
   </script>
 </body>
