--- a/Week 05/dragable.html
+++ b/Week 05/dragable.html
@@ -1,4 +1,24 @@
-<div id="dragable" style="width: 100px;height: 100px; background-color: green;"></div>
+<div id="container">
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+  文字 文字 文字 文字 文字 文字 文字 文字
+</div>
+<div id="dragable" style="display: inline-block; width: 100px;height: 100px; background-color: green;"></div>
 
 <script>
   let dragable = document.getElementById('dragable')
@@ -17,9 +37,45 @@
     }
 
     let move = e => {
-      dragable.style.transform = `translate(${baseX + e.clientX - startX}px, ${baseY + e.clientY - startY}px)`
+      // dragable.style.transform = `translate(${baseX + e.clientX - startX}px, ${baseY + e.clientY - startY}px)`
+      let range = getNearest(e.clientX, e.clientY)
+      range.insertNode(dragable)
     }
     document.addEventListener('mousemove', move)
     document.addEventListener('mouseup', up)
   })
+
+  // 正常流中的拖拽
+  let container = document.getElementById('container'),
+    ranges = []
+
+  for (let i = 0; i < container.childNodes[0].textContent.length; i++) {
+    let range = document.createRange()
+    range.setStart(container.childNodes[0], i)
+    range.setEnd(container.childNodes[0], i)
+
+    console.log(range.getBoundingClientRect())
+    ranges.push(range)
+  }
+
+  function getNearest(x, y) {
+    let min = Infinity,
+      nearest = null
+    
+      for (let range of ranges) {
+        let rect = range.getBoundingClientRect()
+        let distance = (rect.x - x) ** 2 + (rect.y - y) ** 2
+
+        if (distance < min) {
+          nearest = range
+          min = distance
+        }
+      }
+
+      return nearest
+  }
+
+  document.addEventListener('selectstart', e => e.preventDefault())
+
+
 </script>
