--- a/Week 07/index.html
+++ b/Week 07/index.html
@@ -7,39 +7,450 @@
   <title>Realm</title>
 </head>
 <body>
-  <div id="mountNode"></div>
+  <div id="container"></div>
   <script src="https://gw.alipayobjects.com/os/lib/antv/g6/3.7.1/dist/g6.min.js"></script>
   <script>
+    let id = 1
     const data = {
-      nodes: [
+      id: 'global',
+      label: 'JS Core',
+      children: [
         {
-          id: 'node1',
-          x: 100,
-          y: 200,
+          id: 'valueProperties',
+          label: 'Value Properties',
+          children: [
+            {id: 11, label: 'Infinity'},
+            { id: 12, label: 'NaN' },
+            { id: 13, label: 'undefined' },
+            { id: 14, label: 'globalThis' },
+          ],
         },
         {
-          id: 'node2',
-          x: 300,
-          y: 200,
+          id: 'functionProperties',
+          label: 'Function Properties',
+          children: [
+            { id: 21, label: 'eval()' },
+            { id: 22, label: 'isFinite()' },
+            { id: 23, label: 'isNaN()' },
+            { id: 24, label: 'parseFloat()' },
+            { id: 25, label: 'parseInt()' },
+            { id: 26, label: 'encodeURI()' },
+            { id: 27, label: 'encodeURIComponent()' },
+            { id: 28, label: 'decodeURI()' },
+            { id: 29, label: 'decodeURIComponent()' },
+          ]
+        },
+        {
+          id: 'fundamentalObjects',
+          label: 'Fundamental objects',
+          children: [
+            { id: 31, label: 'Object' },
+            { id: 32, label: 'Function' },
+            { id: 33, label: 'Boolean' },
+            { id: 34, label: 'Symbol' },
+          ]
+        },
+        {
+          id: 'errorObject',
+          label: 'Error objects',
+          children: [
+            { id: 41, label: 'Error' },
+            { id: 42, label: 'AggregateError' },
+            { id: 43, label: 'EvalError' },
+            { id: 44, label: 'InternalError' },
+            { id: 45, label: 'RangeError' },
+            { id: 46, label: 'ReferenceError' },
+            { id: 47, label: 'SyntaxError' },
+            { id: 48, label: 'TypeError' },
+            { id: 49, label: 'URIError' },
+          ]
+        },
+        {
+          id: 'numbersAndDates',
+          label: 'Numbers and dates',
+          children: [
+            { id: 51, label: 'Number' },
+            { id: 52, label: 'BigInt' },
+            { id: 53, label: 'Math' },
+            { id: 54, label: 'Date' },
+          ]
+        },
+        {
+          id: 'textProcessing',
+          label: 'Text processing',
+          children: [
+            { id: 61, label: 'String' },
+            { id: 62, label: 'RegExp' },
+          ]
+        },
+        {
+          id: 'indexedCollections',
+          label: 'Indexed collections',
+          children: [
+            { id: 71, label: 'Array' },
+            { id: 72, label: 'Int8Array' },
+            { id: 73, label: 'Uint8Array' },
+            { id: 74, label: 'Uint8ClampedArray' },
+            { id: 75, label: 'Int16Array' },
+            { id: 76, label: 'Uint16Array' },
+            { id: 77, label: 'Int32Array' },
+            { id: 78, label: 'Uint32Array' },
+            { id: 79, label: 'Float32Array' },
+            { id: 791, label: 'Float64Array' },
+            { id: 792, label: 'BigInt64Array' },
+            { id: 793, label: 'BigUint64Array' },
+          ]
+        },
+        {
+          id: 'keyedCollections',
+          label: 'Keyed collections',
+          children: [
+            { id: 81, label: 'Map' },
+            { id: 82, label: 'Set' },
+            { id: 83, label: 'WeakMap' },
+            { id: 84, label: 'WeakSet' },
+          ]
+        },
+        {
+          id: 'structuredData',
+          label: 'Structure data',
+          children: [
+            { id: 91, label: 'ArrayBuffer' },
+            { id: 92, label: 'SharedArrayBuffer' },
+            { id: 93, label: 'Atomics' },
+            { id: 94, label: 'DataView' },
+            { id: 95, label: 'JSON' },
+          ]
+        },
+        {
+          id: 'cao',
+          label: 'Control abstraction objects',
+          children: [
+            { id: 101, label: 'Promise' },
+            { id: 102, label: 'Generator' },
+            { id: 103, label: 'GeneratorFunction' },
+            { id: 104, label: 'AsyncFunction' },
+          ]
+        },
+        {
+          id: 'refection',
+          label: 'Reflection',
+          children: [
+            { id: 111, label: 'Reflect' },
+            { id: 112, label: 'Proxy' },
+          ]
+        },
+        {
+          id: 'internationalization',
+          label: 'Internationalization',
+          children: [
+            { id: 121, label: 'Intl' },
+            { id: 122, label: 'Intl.Collator' },
+            { id: 123, label: 'Intl.DateTimeFormat' },
+            { id: 124, label: 'Intl.ListFormat' },
+            { id: 125, label: 'Intl.NumberFormat' },
+            { id: 126, label: 'Intl.PluralRules' },
+            { id: 127, label: 'Intl.RelativeTimeFormat' },
+            { id: 128, label: 'Intl.Locale' },
+          ]
+        },
+        {
+          id: 'webAssembly',
+          label: 'WebAssembly',
+          children: [
+            { id: 131, label: 'WebAssembly' },
+            { id: 132, label: 'WebAssembly.Module' },
+            { id: 133, label: 'WebAssembly.Instance' },
+            { id: 134, label: 'WebAssembly.Memory' },
+            { id: 135, label: 'WebAssembly.Table' },
+            { id: 136, label: 'WebAssembly.CompileError' },
+            { id: 137, label: 'WebAssembly.LinkError' },
+            { id: 138, label: 'WebAssembly.RuntimeError' },
+          ]
+        },
+        {
+          id: 'other',
+          label: 'arguments',
+          children: []
         }
       ],
-      // 边集
-      edges: [
-        {
-          source: 'node1',
-          target: 'node2',
-        }
-      ]
     }
 
-    const graph = new G6.Graph({
-      container: 'mountNode',
-      width: 800,
-      height: 500,
-    })
+    const minWidth = 60;
 
-    graph.data(data)
-    graph.render()
+    const BaseConfig = {
+      nameFontSize: 12,
+      childCountWidth: 22,
+      countMarginLeft: 0,
+      itemPadding: 16,
+      nameMarginLeft: 4,
+      rootPadding: 18,
+    };
+
+    G6.registerNode('treeNode', {
+      draw: (cfg, group) => {
+        const { id, label, collapsed, selected, children, depth } = cfg;
+        const rootNode = depth === 0;
+        const hasChildren = children && children.length !== 0;
+
+        const {
+          childCountWidth,
+          countMarginLeft,
+          itemPadding,
+          selectedIconWidth,
+          nameMarginLeft,
+          rootPadding,
+        } = BaseConfig;
+
+        let width = 0;
+        const height = 28;
+        const x = 0;
+        const y = -height / 2;
+
+        // 名称文本
+        const text = group.addShape('text', {
+          attrs: {
+            text: label,
+            x: x * 2,
+            y,
+            textAlign: 'left',
+            textBaseline: 'top',
+            fontFamily: 'PingFangSC-Regular',
+          },
+          cursor: 'pointer',
+          name: 'name-text-shape',
+        });
+        const textWidth = text.getBBox().width;
+        width = textWidth + itemPadding + nameMarginLeft;
+
+        width = width < minWidth ? minWidth : width;
+
+        if (!rootNode && hasChildren) {
+          width += countMarginLeft;
+          width += childCountWidth;
+        }
+
+        const keyShapeAttrs = {
+          x,
+          y,
+          width,
+          height,
+          radius: 4,
+        };
+
+        // keyShape根节点选中样式
+        if (rootNode && selected) {
+          keyShapeAttrs.fill = '#e8f7ff';
+          keyShapeAttrs.stroke = '#e8f7ff';
+        }
+        const keyShape = group.addShape('rect', {
+          attrs: keyShapeAttrs,
+          name: 'root-key-shape-rect-shape',
+        });
+
+        if (!rootNode) {
+          // 底部横线
+          group.addShape('path', {
+            attrs: {
+              path: [
+                ['M', x - 1, 0],
+                ['L', width, 0],
+              ],
+              stroke: '#AAB7C4',
+              lineWidth: 1,
+            },
+            name: 'node-path-shape',
+          });
+        }
+
+        const mainX = x - 10;
+        const mainY = -height + 15;
+
+        if (rootNode) {
+          group.addShape('rect', {
+            attrs: {
+              x: mainX,
+              y: mainY,
+              width: width + 12,
+              height,
+              radius: 14,
+              fill: '#e8f7ff',
+              cursor: 'pointer',
+            },
+            name: 'main-shape',
+          });
+        }
+
+        let nameColor = 'rgba(0, 0, 0, .65)';
+        if (selected) {
+          nameColor = '#40A8FF';
+        }
+
+        // 名称
+        if (rootNode) {
+          group.addShape('text', {
+            attrs: {
+              text: label,
+              x: mainX + rootPadding,
+              y: 1,
+              textAlign: 'left',
+              textBaseline: 'middle',
+              fill: nameColor,
+              fontSize: 12,
+              fontFamily: 'PingFangSC-Regular',
+              cursor: 'pointer',
+            },
+            name: 'root-text-shape',
+          });
+        } else {
+          group.addShape('text', {
+            attrs: {
+              text: label,
+              x: selected ? mainX + 6 + nameMarginLeft : mainX + 6,
+              y: y - 5,
+              textAlign: 'start',
+              textBaseline: 'top',
+              fill: nameColor,
+              fontSize: 12,
+              fontFamily: 'PingFangSC-Regular',
+              cursor: 'pointer',
+            },
+            name: 'not-root-text-shape',
+          });
+        }
+
+        // 子类数量
+        if (hasChildren && !rootNode) {
+          const childCountHeight = 12;
+          const childCountX = width - childCountWidth;
+          const childCountY = -childCountHeight / 2;
+
+          group.addShape('rect', {
+            attrs: {
+              width: childCountWidth,
+              height: 12,
+              stroke: collapsed ? '#1890ff' : '#5CDBD3',
+              fill: collapsed ? '#fff' : '#E6FFFB',
+              x: childCountX,
+              y: childCountY,
+              radius: 6,
+              cursor: 'pointer',
+            },
+            name: 'child-count-rect-shape',
+          });
+          group.addShape('text', {
+            attrs: {
+              text: `${children?.length}`,
+              fill: 'rgba(0, 0, 0, .65)',
+              x: childCountX + childCountWidth / 2,
+              y: childCountY + 12,
+              fontSize: 10,
+              width: childCountWidth,
+              textAlign: 'center',
+              cursor: 'pointer',
+            },
+            name: 'child-count-text-shape',
+          });
+        }
+
+        return keyShape;
+      },
+    });
+
+    G6.registerEdge('smooth', {
+      draw(cfg, group) {
+        const { startPoint, endPoint } = cfg;
+        const hgap = Math.abs(endPoint.x - startPoint.x);
+
+        const path = [
+          ['M', startPoint.x, startPoint.y],
+          [
+            'C',
+            startPoint.x + hgap / 4,
+            startPoint.y,
+            endPoint.x - hgap / 2,
+            endPoint.y,
+            endPoint.x,
+            endPoint.y,
+          ],
+        ];
+
+        const shape = group.addShape('path', {
+          attrs: {
+            stroke: '#AAB7C4',
+            path,
+          },
+          name: 'smooth-path-shape',
+        });
+        return shape;
+      },
+    });
+
+
+    const container = document.getElementById('container');
+    const width = 800;
+    const height = 800;
+    const graph = new G6.TreeGraph({
+      container: 'container',
+      width,
+      height,
+      modes: {
+        default: [
+          {
+            type: 'collapse-expand',
+          },
+          'drag-canvas',
+          'zoom-canvas',
+        ],
+      },
+      defaultNode: {
+        type: 'treeNode',
+        anchorPoints: [
+          [0, 0.5],
+          [1, 0.5],
+        ],
+      },
+      defaultEdge: {
+        type: 'smooth',
+      },
+      layout: {
+        type: 'compactBox',
+        direction: 'LR',
+        getId: function getId(d) {
+          return d.id;
+        },
+        getHeight: function getHeight() {
+          return 16;
+        },
+        getWidth: function getWidth(d) {
+          const labelWidth = G6.Util.getTextSize(d.label, BaseConfig.nameFontSize)[0];
+          const width =
+            BaseConfig.itemPadding +
+            BaseConfig.nameMarginLeft +
+            labelWidth +
+            BaseConfig.rootPadding +
+            BaseConfig.childCountWidth;
+          return width;
+        },
+        getVGap: function getVGap() {
+          return 15;
+        },
+        getHGap: function getHGap() {
+          return 30;
+        },
+      },
+    });
+
+    graph.data(data);
+    graph.render();
+    graph.fitView();
+
+    if (typeof window !== 'undefined')
+      window.onresize = () => {
+        if (!graph || graph.get('destroyed')) return;
+        if (!container || !container.scrollWidth || !container.scrollHeight) return;
+        graph.changeSize(container.scrollWidth, container.scrollHeight);
+      };
   </script>
 </body>
 </html>
